force-app/main/default/objects/SPA_Form_Line_Item__c/SPA_Form_Line_Item__c.object-meta.xml
<CustomObject>
    <label>SPA Form Line Item</label>
    <nameField>
        <displayFormat>SPALine-{00000000}</displayFormat>
        <label>SPA Form Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPA Form Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>