force-app/main/default/objects/SPA_Form_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>SPAM_Form_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>