force-app/main/default/objects/SPA_Form_Line_Item__c/fields/Requested_Total__c.field-meta.xml
<CustomField>
    <fullName>Requested_Total__c</fullName>
    <formula>Quantity__c *  Requested_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>