force-app/main/default/objects/SPA_Form_Line_Item__c/fields/SPA_Form__c.field-meta.xml
<CustomField>
    <fullName>SPA_Form__c</fullName>
    <label>SPA Form</label>
    <referenceTo>SPA_Form__c</referenceTo>
    <relationshipLabel>SPA Form Line Items</relationshipLabel>
    <relationshipName>SPA_Form_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>